--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,8 +1,51 @@
 components:
-- components: []
+- components:
+  - components:
+    - layout_properties: {grid_position: 'LMHECN,ZZKYTG'}
+      name: label_1
+      properties: {text: Pick a stock}
+      type: Label
+    - layout_properties: {grid_position: 'LJGNOM,LOMVIY'}
+      name: drop_down_stocks
+      properties:
+        items: [AAPL, TSLA]
+      type: DropDown
+    layout_properties: {grid_position: 'ZDKEPQ,PZQOHI'}
+    name: outlined_card_1
+    properties: {role: outlined-card}
+    type: ColumnPanel
+  - components:
+    - components:
+      - layout_properties: {}
+        name: label_4
+        properties: {bold: true, text: 'Ticker:'}
+        type: Label
+      - name: stockTicker
+        properties: {}
+        type: Label
+      layout_properties: {grid_position: 'XNFOCW,ZNFXMH'}
+      name: flow_panel_1
+      properties: {}
+      type: FlowPanel
+    - components:
+      - layout_properties: {}
+        name: label_6
+        properties: {bold: true, text: 'Price:'}
+        type: Label
+      - name: stockPrice
+        properties: {}
+        type: Label
+      layout_properties: {grid_position: 'RKDHGH,KQJHCO'}
+      name: flow_panel_2
+      properties: {}
+      type: FlowPanel
+    layout_properties: {grid_position: 'QEYLUE,EIFQJI'}
+    name: outlined_card_2
+    properties: {role: outlined-card}
+    type: ColumnPanel
   layout_properties: {slot: default}
   name: content_panel
-  properties: {col_widths: '{}'}
+  properties: {}
   type: ColumnPanel
 - layout_properties: {slot: nav-right}
   name: navbar_links
