--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -5,7 +5,8 @@ components:
       name: label_1
       properties: {text: Pick a stock}
       type: Label
-    - layout_properties: {grid_position: 'LJGNOM,LOMVIY'}
+    - event_bindings: {change: drop_down_stocks_change}
+      layout_properties: {full_width_row: false, grid_position: 'LJGNOM,LOMVIY'}
       name: drop_down_stocks
       properties:
         items: [AAPL, TSLA]
