feat(ui): add stock name and price display on a page

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,4 +6,5 @@ unique_ids:
     Form1: LIAN44V3PD2CTHPIR27YD7GAZEJQTCZT
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1733554107698814907793135.8381'
