--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -47,7 +47,7 @@ components:
     type: ColumnPanel
   layout_properties: {slot: default}
   name: content_panel
-  properties: {}
+  properties: {visible: true}
   type: ColumnPanel
 - layout_properties: {slot: nav-right}
   name: navbar_links
