--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,5 +1,8 @@
 allow_embedding: false
-dependencies: []
+dependencies:
+- dep_id: dep_9fcxvd73x4lpy
+  resolution_hints: {app_id: 4UK6WHQ6UX7AKELK, name: Material 3 Theme, package_name: m3}
+  version: {version_tag: v1.2.2}
 name: stock-picker
 package_name: stock_picker
 renamed: true
