--- a/anvil.yaml
+++ b/anvil.yaml
@@ -4,13 +4,15 @@ dependencies:
   resolution_hints: {app_id: 4UK6WHQ6UX7AKELK, name: Material 3 Theme, package_name: m3}
   version: {version_tag: v1.2.2}
 name: stock-picker
+native_deps: null
 package_name: stock_picker
 renamed: true
 runtime_options:
   client_version: '3'
+  legacy_features: {__dict__: true, bootstrap3: true, class_names: true, root_container: true}
   server_spec: {base: python310-minimal}
   server_version: python3-sandbox
-  version: 2
+  version: 3
 secrets:
   FinnHubAPI:
     type: secret
